# netctl-tray

./: .gitignore  Cargo.toml  README.md  install.sh
scripts/: connect  disconnect  netctl-auto-list  netctl-auto-switch-to  netctl-list  netctl-switch-to  netctl-tray.policy  netctl-tray.rules  netctltray
src/: auto.rs  main.rs  state.rs  utils.rs
