[package]
name = "netctl-tray"
version = "0.1.0"
authors = ["Ponas <mykolas.peteraitis@gmail.com>"]
edition = "2018"

[dependencies]
qt_widgets = "0.3.0"
qt_gui = "0.3.0"
regex = "1.3.1"
shells = "0.2.0"

[[bin]]
name = "netctl-tray"
path = "src/main.rs"

[[bin]]
name = "netctl-auto-tray"
path = "src/auto.rs"
