[package]
name = "netctl-tray"
version = "0.2.1"
authors = ["Ponas <mykolas.peteraitis@gmail.com>"]
edition = "2018"

[dependencies]
qt_widgets = "0.3.0"
qt_gui = "0.3.0"
notify = "5.0.0-pre.2" # watching filesystem
notify-rust = "3" # desktop notifications
structopt = "0.3.14"
users = "0.10.0"

[features]
auto = []